--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <p>long:<span id="long"></span></p>
       <p>dist:<span id="dist"></span></p>
 
+      <p>Phoneid:<span id="phoneid"></span></p>
+
       <div id='play1'>
         <audio src="audio/5.wav" preload="auto" ></audio>
         <button id='play1-button'>play1</button>
