Started work on toggling GPS.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       <h3>Geolocation</h3>
       <p>lat:<span id="lat"></span></p>
       <p>long:<span id="long"></span></p>
-      <p>dist:<span id="dist"></span></p>
 
       <p>Phoneid:<span id="phoneid"></span></p>
+
+      <div id='gps'>
+        <button id='gps-button'>gps</button>
+      </div>
 
       <div id='play1'>
         <audio src="audio/5.wav" preload="auto" ></audio>
@@ -31,7 +34,5 @@
         <button id='play2-button'>play1</button>
         <span id='play2-volume'></span>
       </div>
-
-
     </body>
 </html>
