change the pitch using distance

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <body>
       <h3>Geolocation</h3>
       <p>lat:<span id="lat"></span></p>
-      <p>long:<span id="long"></span></p>
+      <p>long:<span id="lon"></span></p>
+      <p>dist:<span id="freq"></span></p>
 
-      <button onclick="start()">play</button>
+      <button onclick="start(400.0)">play</button>
       <button onclick="stop()">stop</button>
 
       <p>Phoneid:<span id="phoneid"></span></p>
