--- a/index.html
+++ b/index.html
@@ -17,27 +17,15 @@
       <h3>Geolocation</h3>
       <p>lat:<span id="lat"></span></p>
       <p>long:<span id="lon"></span></p>
-      <p>dist:<span id="freq"></span></p>
-
-      <button onclick="start(400.0)">play</button>
-      <button onclick="stop()">stop</button>
-
-      <p>Phoneid:<span id="phoneid"></span></p>
+      <p>freq:<span id="freq"></span></p>
+      <p>dist:<span id="dist"></span></p>
 
       <div id='gps'>
         <button id='gps-button'>gps</button>
       </div>
+      <button onclick="start(400.0)">play</button>
+      <button onclick="stop()">stop</button>
 
-      <div id='play1'>
-        <audio src="audio/5.wav" preload="auto" ></audio>
-        <button id='play1-button'>play1</button>
-        <span id='play1-volume'></span>
-      </div>
-
-      <div id='play2'>
-        <audio src="audio/6.ogg" preload="auto" ></audio>
-        <button id='play2-button'>play1</button>
-        <span id='play2-volume'></span>
-      </div>
+      <p>Phoneid:<span id="phoneid"></span></p>
     </body>
 </html>
