Fixed up interaction design.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
       <p>freq:<span id="freq"></span></p>
       <p>dist:<span id="dist"></span></p>
 
-      <div id='gps'>
-        <button id='gps-button'>gps</button>
-      </div>
-      <button onclick="start(400.0)">play</button>
-      <button onclick="stop()">stop</button>
+      <button id='play'>play</button>
+      <button id='stop'>stop</button>
 
       <p>Phoneid:<span id="phoneid"></span></p>
     </body>
