--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" type="text/css" href="style/cowboy.css" />
 
         <title>Test Sensors</title>
 
@@ -13,14 +14,40 @@
     </head>
 
     <body>
-      <h3>Geolocation</h3>
-      <p>Phoneid:<span id="phoneid"></span></p>
-      <p>lat:<span id="lat"></span></p>
-      <p>long:<span id="lon"></span></p>
-      <p>freq:<span id="freq"></span></p>
-      <p>dist:<span id="dist"></span></p>
-
       <button id='play'>play</button>
       <button id='stop'>stop</button>
+      <hr/>
+      <div id='0'>
+        <ul>
+          <li>Phoneid:<span class="phoneid"></span></li>
+          <li>lat:<span class="lat"></span></li>
+          <li>long:<span class="lon"></span></li>
+          <li>Bfreq:<span class="bfreq"></span></li>
+          <li>Afreq:<span class="afreq"></span></li>
+          <li>dist:<span class="dist"></span></li>
+        </ul>
+      </div>
+
+      <div id='1'>
+        <ul>
+          <li>Phoneid:<span class="phoneid"></span></li>
+          <li>lat:<span class="lat"></span></li>
+          <li>long:<span class="lon"></span></li>
+          <li>Bfreq:<span class="bfreq"></span></li>
+          <li>Afreq:<span class="afreq"></span></li>
+          <li>dist:<span class="dist"></span></li>
+        </ul>
+      </div>
+
+      <div id='2'>
+        <ul>
+          <li>Phoneid:<span class="phoneid"></span></li>
+          <li>lat:<span class="lat"></span></li>
+          <li>long:<span class="lon"></span></li>
+          <li>Bfreq:<span class="bfreq"></span></li>
+          <li>Afreq:<span class="bfreq"></span></li>
+          <li>dist:<span class="dist"></span></li>
+        </ul>
+      </div>
     </body>
 </html>
