now with less device thrashing.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <button id='play'>play</button>
       <button id='stop'>stop</button>
       <hr/>
+      <p>Your Device: <span id="id"></span></p>
+      <p>Transmit: <span id="transmit"></span></p>
+      <hr/>
       <div id='0'>
         <ul>
           <li><b>Phoneid:<span class="phoneid"></span></b></li>
@@ -24,7 +27,7 @@
           <li>long:<span class="lon"></span></li>
           <li>dist:<span class="dist"></span></li>
           <li>Bfreq:<span class="bfreq"></span>Hz</li>
-          <li>Afreq:<span class="afreq"></span>Hz</li>
+          <li>Afreq:<span class="afreq"></span>Hz{</li>
         </ul>
       </div>
 
