--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Load up the controller code. -->
         <script src="js/physical-events.js"></script>
         <script src="js/synth.js"></script>
+        <script src="js/timbre.js"></script>
     </head>
 
     <body>
@@ -27,7 +28,7 @@
           <li>long:<span class="lon"></span></li>
           <li>dist:<span class="dist"></span></li>
           <li>Bfreq:<span class="bfreq"></span>Hz</li>
-          <li>Afreq:<span class="afreq"></span>Hz{</li>
+          <li>Afreq:<span class="afreq"></span>Hz</li>
         </ul>
       </div>
 
