--- a/index.html
+++ b/index.html
@@ -17,40 +17,10 @@
       <button id='play'>play</button>
       <button id='stop'>stop</button>
       <hr/>
-      <p>Your Device: <span id="id"></span></p>
+      <p>Your Device: <span id="imei"></span></p>
       <p>Transmit: <span id="transmit"></span></p>
+      <p>Status: <span id="status"></span></p>
       <hr/>
-      <div id='0'>
-        <ul>
-          <li><b>Phoneid:<span class="phoneid"></span></b></li>
-          <li>lat:<span class="lat"></span></li>
-          <li>long:<span class="lon"></span></li>
-          <li>dist:<span class="dist"></span></li>
-          <li>Bfreq:<span class="bfreq"></span>Hz</li>
-          <li>Afreq:<span class="afreq"></span>Hz</li>
-        </ul>
-      </div>
-
-      <div id='1'>
-        <ul>
-          <li><b>Phoneid:<span class="phoneid"></span></b></li>
-          <li>lat:<span class="lat"></span></li>
-          <li>long:<span class="lon"></span></li>
-          <li>dist:<span class="dist"></span></li>
-          <li>Bfreq:<span class="bfreq"></span>Hz</li>
-          <li>Afreq:<span class="afreq"></span>Hz</li>
-        </ul>
-      </div>
-
-      <div id='2'>
-        <ul>
-          <li><b>Phoneid:<span class="phoneid"></span></b></li>
-          <li>lat:<span class="lat"></span></li>
-          <li>long:<span class="lon"></span></li>
-          <li>dist:<span class="dist"></span></li>
-          <li>Bfreq:<span class="bfreq"></span>Hz</li>
-          <li>Afreq:<span class="bfreq"></span>Hz</li>
-        </ul>
-      </div>
+      <div id='instruments'/>
     </body>
 </html>
