fixed stop button.

--- a/testSynth.html
+++ b/testSynth.html
@@ -7,22 +7,26 @@
     <script src='js/timbre.js'></script>
     <script>
 
+    var step=0;
+    var interval=500;
+
     var osc = T("osc");
-var env = T("perc", {a:50, r:2500});
-var oscenv = T("OscGen", {osc:osc, env:env, mul:0.15}).play();
+	var env = T("perc", {a:50, r:2500});
+	var oscenv = T("OscGen", {osc:osc, env:env, mul:0.15}).play();
 
-T("interval", {interval:500}, function(count) {
-  var noteNum  = 69 + [0, 2, 4, 5, 7, 9, 11, 12][count % 8];
-  var velocity = 64 + (count % 64);
-  oscenv.noteOn(noteNum, velocity);
-}).start();
+	var tune=T("interval", {interval:interval}, function(count) {
+	  var noteNum  = 69 + [0, 2, 4, 7, 9, 12,14,16,19,21][step % 10];
+	  var velocity = 64 + (count % 64);
+	  oscenv.noteOn(noteNum, velocity);
+	}).start();
 
-function change()
-{
-		env=T("perc", {a:50, r:2500});
-	oscenv.set
-}
+	function change()
+	{
+		interval=interval*0.95;
+		tune.set({'interval':interval})
+		step++;
+	}
     </script>
 
-    <button onclick='change'>test</button>
+    <button onclick='change()'>test</button>
 </html>
