added link to test page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
       <button id='play'>play</button>
       <button id='stop'>stop</button>
+      <a href='testSynth.html'>test synth'</a>
       <hr/>
       <p>Your Device: <span id="imei"></span></p>
       <p>Transmit: <span id="transmit"></span></p>
